--- a/RayTracer/Cargo.toml
+++ b/RayTracer/Cargo.toml
@@ -9,6 +9,7 @@ edition = "2021"
 image = "0.24.2"
 indicatif = "0.16.2" # progress bar
 rand = "0.8"
+rayon = "1.5.1"
 
 [build-dependencies]
 cc = "1.0"
