--- a/RayTracer/Cargo.toml
+++ b/RayTracer/Cargo.toml
@@ -10,6 +10,7 @@ image = "0.24.2"
 indicatif = "0.16.2" # progress bar
 rand = "0.8"
 rayon = "1.5.1"
+opencv = "0.77.0"
 
 [build-dependencies]
 cc = "1.0"
