--- a/RayTracer/Cargo.toml
+++ b/RayTracer/Cargo.toml
@@ -11,6 +11,4 @@ indicatif = "0.16.2" # progress bar
 rand = "0.8"
 rayon = "1.5.1"
 opencv = "0.77.0"
-
-[build-dependencies]
-cc = "1.0"
+crossbeam = "0.8.0"
